adding morphological data to the Hebrew. Big change

--- a/css/_reference.scss
+++ b/css/_reference.scss
@@ -18,7 +18,7 @@
 		font-size: 140%;
 		line-height: 1em;
 		text-align: right;
-		span { margin: 0 2px; }
+		span.word { margin: 0 2px; }
 	}
 
 	.right { width: 95%; padding: 0 2%; }
