--- a/css/layout.css
+++ b/css/layout.css
@@ -139,19 +139,19 @@ span, a.word-tree {
   -webkit-border-radius: 3px;
   cursor: pointer; }
 
-.reference span:hover {
+.reference span.word:hover {
   background: #eff; }
 
-.reference span.added:hover {
+.reference span.word.added:hover {
   background: none; }
 
-#verse.isolate {
-  color: #999; }
-
+/*#verse.isolate {
+	color: #999;
+}
 #verse.isolate ol li span {
-  background: none;
-  color: #999; }
-
+	background: none;
+	color: #999;
+}*/
 .selectWrapper {
   position: absolute;
   left: 0;
@@ -423,7 +423,7 @@ note:hover {
     font-size: 140%;
     line-height: 1em;
     text-align: right; }
-    .referencePanel .hebrew.original span {
+    .referencePanel .hebrew.original span.word {
       margin: 0 2px; }
   .referencePanel .right {
     width: 95%;
