making cross references look prettier

--- a/css/layout.scss
+++ b/css/layout.scss
@@ -172,6 +172,13 @@ form ul li {list-style:none;}
 
 }*/
 
+.crossReferences {
+	ul {
+		margin-left: 1em;
+	}
+
+}
+
 .searchPanel {
 	.advanced {
 		display: none;
