--- a/css/layout.css
+++ b/css/layout.css
@@ -879,3 +879,8 @@ form.search #advanced {
   width: 150px; }
 #settings-popup select {
   width: 150px; }
+
+#wordControlPanel .close-word-details {
+  position: absolute;
+  top: 10px;
+  right: 10px; }
