--- a/css/layout.scss
+++ b/css/layout.scss
@@ -526,3 +526,11 @@ form.search {
 		width: 150px;
 	}
 }
+
+#wordControlPanel {
+	.close-word-details {
+		position: absolute;
+		top: 10px;
+		right: 10px;
+	}
+}
