--- a/css/_menu.scss
+++ b/css/_menu.scss
@@ -38,7 +38,7 @@ $menu-width: 200px;
 		transform: rotate(90deg);
 
 		font-weight: 100;
-		width: 100px;
+		min-width: 110px;
 		span {
 			margin: 0;
 			padding: 0;
