--- a/css/_reference.scss
+++ b/css/_reference.scss
@@ -10,6 +10,24 @@
 			list-style: none;
 		}
 
+		li {
+			position: relative;
+		}
+
+		// Bookmarker
+		.bookmarker {
+			display: none;
+			cursor: pointer;
+			position: absolute;
+				top: 2px;
+				left: -20px;
+		}
+		li:hover {
+			.bookmarker {
+				display: block;
+			}
+		}
+
 		.loading {
 			padding: 1em;
 			text-align: center;
