--- a/css/layout.css
+++ b/css/layout.css
@@ -812,7 +812,10 @@ form.search {
 #settings-popup select {
   width: 150px; }
 
-#wordControlPanel .close-word-details {
-  position: absolute;
-  top: 10px;
-  right: 10px; }
+#wordControlPanel .clear-word-details {
+  background: lightblue;
+  color: #fff;
+  display: block;
+  padding: .5em;
+  text-align: center;
+  text-decoration: none; }
