--- a/css/_dock.scss
+++ b/css/_dock.scss
@@ -22,6 +22,13 @@
 		}
 	}
 
+	.versionSelector.right {
+		@media ( max-width: 480px ) {
+			width: 100px;
+		}
+	}
+
+
 	select {
 		font-family: 'Helvetica Neue';
 		font-weight: 100;
