--- a/src/components/word-details/styles.scss
+++ b/src/components/word-details/styles.scss
@@ -1,6 +1,7 @@
 .title {
-	font-weight: normal;
-	padding-left: 5px;
+	cursor: pointer;
+	font-weight: 100;
+	padding: 5px;
 	position: relative;
 }
 
@@ -10,9 +11,10 @@
 
 .remove {
 	color: #fff;
+	padding: 8px;
 	position: absolute;
-	top: 3px;
-	right: 3px;
+	top: 0;
+	right: 0;
 }
 
 .visible {
@@ -34,4 +36,9 @@ a.clear-all {
 
 .word-block {
 	padding: .5em;
+}
+
+.strongs-number-title {
+	display: inline-block;
+	width: 85px;
 }
