revert bad bug fix

--- a/css/layout.css
+++ b/css/layout.css
@@ -454,7 +454,8 @@ note:hover {
           padding: 0 4% 0 2%;
           width: 43%; } }
   .referencePanel .verse .wrapper {
-      vertical-align: top; }
+    display: inline-block;
+    vertical-align: top; }
 
 .verse-number {
   color: #aaa; }
