--- a/css/_reference.scss
+++ b/css/_reference.scss
@@ -59,7 +59,7 @@
 	}
 
 
-	.verse .wrapper { vertical-align:top; }
+	.verse .wrapper { display:inline-block; vertical-align:top; }
 }
 
 .verse-number {
