fix cross references for titus

--- a/css/layout.css
+++ b/css/layout.css
@@ -814,3 +814,9 @@ form.search {
   padding: .5em;
   text-align: center;
   text-decoration: none; }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Helvetica Neue';
+  font-weight: 100;
+  letter-spacing: .02em;
+}
