move the clear all

--- a/src/components/word-details/styles.scss
+++ b/src/components/word-details/styles.scss
@@ -25,13 +25,21 @@
 	display: none;
 }
 
+$trayWidth: 320px;
+$width: 70px;
+$padding: 10px;
 a.clear-all {
     background: lightblue;
     color: #fff;
     display: block;
-    padding: .5em;
+    padding: $padding;
+    position: fixed;
+    bottom: 55px;
+    left: $trayWidth - $width - $padding * 2;
+    cursor: pointer;
     text-align: right;
     text-decoration: none;
+    width: $width;
 }
 
 .word-block {
@@ -41,4 +49,10 @@ a.clear-all {
 .strongs-number-title {
 	display: inline-block;
 	width: 85px;
+}
+
+.search-results {
+	a {
+		text-decoration: none;
+	}
 }
