--- a/css/layout.scss
+++ b/css/layout.scss
@@ -36,7 +36,7 @@ body > .wrapper { height: 0;}
 .verse .web span, .verse span.added, transchange { color:#aaa; font-style: italic; }
 .verse {line-height:1.4em; }
 .verse h1 {text-align: center; line-height: 150%; font-family: 'Helvetica Neue', Helvetica, Arial; font-weight: 100; }
-span, a.word-tree {margin: 0 -2px; padding: 0 2px; position: relative; border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;cursor:pointer;}
+.chapter span, a.word-tree {margin: 0 -2px; padding: 0 2px; position: relative; border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;cursor:pointer;}
 .reference span.word:hover {
 	background: #eff;
 }
