new release with different refernences left and right

--- a/src/components/reference/styles.scss
+++ b/src/components/reference/styles.scss
@@ -4,6 +4,13 @@
 	overflow-y: scroll;
 }
 
+.reference-is-different {
+	flex-basis: 50%;
+	height: calc( 100vh - 56px );
+	overflow-x: hidden;
+	overflow-y: scroll;
+}
+
 .single-reference {
 	display: flex;
 	line-height: 140%;
