--- a/src/components/reference/styles.scss
+++ b/src/components/reference/styles.scss
@@ -9,6 +9,7 @@
 	display: flex;
 	line-height: 140%;
 	justify-content: center;
+	position: relative;
 
 	&:hover {
 		.bookmarker {
@@ -26,7 +27,7 @@
 
 .verseWrapper {
 	color: #bbb;
-	padding: 0 10px;
+	padding: 0 20px;
 	flex-basis: 50%;
 	flex-grow: 2;
 	max-width: 480px;
@@ -37,8 +38,13 @@
 }
 
 .bookmarker {
+	cursor: pointer;
+	position: absolute;
+	right: 0;
+	top: 20px;
 	visibility: hidden;
 }
 
 .chapter {
-	margin: 0 auto;}
+	margin: 0 auto;
+}
