--- a/src/components/word-details/styles.scss
+++ b/src/components/word-details/styles.scss
@@ -1,7 +1,8 @@
 .title {
 	cursor: pointer;
 	font-weight: 100;
-	padding: 5px;
+	margin: 0 !important;
+	padding: 5px !important;
 	position: relative;
 }
 
