--- a/css/layout.css
+++ b/css/layout.css
@@ -13,7 +13,7 @@ a {
   text-decoration: none; }
 
 .added {
-  font-style: italic; }
+  color: #aaa; font-style: italic; }
 
 form ul li {
   list-style: none; }
