--- a/src/components/reference-selector/styles.scss
+++ b/src/components/reference-selector/styles.scss
@@ -1,10 +1,12 @@
+@import '../_colors.scss';
+
 .bookControl {
 	line-height: 2em;
 	padding-left: .5em;
 	position: relative;
 
 	&:hover {
-		background: rgba( 150, 230, 230, 0.2 );
+		background: $hover;
 	}
 }
 
