--- a/css/layout.css
+++ b/css/layout.css
@@ -4,10 +4,11 @@
   padding: 0; }
 
 body {
-  background: #fff;
-  color: #000;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 100%; }
+	background: #fff;
+	color: #000;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 100%;
+}
 
 a {
   color: #000;
@@ -41,6 +42,15 @@ input {
 
 input[type=checkbox] {
   box-shadow: none; }
+
+input[type=reset] {
+	background: none;
+	border: none;
+	color: #999;
+	font-size: 14px;
+	height: auto;
+	line-height: 2;
+}
 
 select {
   /* Removes the default <select> styling */
