--- a/src/components/search/styles.scss
+++ b/src/components/search/styles.scss
@@ -1,12 +1,22 @@
 .search {
 	fieldset {
 		margin: 5px;
+		position: relative;
 	}
 
 	select {
 		height: 1em;
 		line-height: 1em;
 	}
+}
+
+.picker-button {
+	border-top-left-radius: 0;
+	border-bottom-left-radius: 0;
+	padding: 0 10px;
+	position: absolute;
+	right: 0;
+	top: 0;
 }
 
 .header {
